--- a/src/view/ComponentsOrganizer.mxml
+++ b/src/view/ComponentsOrganizer.mxml
@@ -85,6 +85,7 @@
 			
 			public function removeDroppedElement(ownerComponent:IVisualElement, component:IVisualElement):void
 			{
+				isProcessRunning = true;
 				findItemInDepth(components.source, isSubDivComponent(ownerComponent));
 				this.callLater(function():void
 				{
@@ -101,6 +102,7 @@
 					
 					refreshItem(component);
 					foundIndepthItem = null;
+					isProcessRunning = false;
 				});
 			}
 			
