VE Integration: Update DataTable with converter
(reference prominic/Moonshine-IDE#438)

--- a/src/view/primeFaces/forms/DataTableForm.mxml
+++ b/src/view/primeFaces/forms/DataTableForm.mxml
@@ -16,7 +16,7 @@
 			import spark.events.GridItemEditorEvent;
 			
 			import data.ConstantsItems;
-			import data.DataProviderListItem;
+			import vo.DataProviderListItem;			
 			
 			import view.interfaces.IHistorySurfaceComponent;
 			import view.interfaces.ISurfaceComponent;
