VE Integration: Update SelectOneRadio with converter
(reference prominic/Moonshine-IDE#438)

--- a/src/view/primeFaces/forms/SelectOneRadioForm.mxml
+++ b/src/view/primeFaces/forms/SelectOneRadioForm.mxml
@@ -7,18 +7,17 @@
         creationComplete="onTabFormCreationComplete(event)" xmlns:forms="view.forms.*">
 	<fx:Script>
 		<![CDATA[
+			import data.ConstantsItems;
+			import vo.SelectItem;
+
 			import mx.binding.utils.BindingUtils;
 			import mx.binding.utils.ChangeWatcher;
 			import mx.events.FlexEvent;
 			import mx.utils.ObjectUtil;
-			
+
 			import spark.events.GridItemEditorEvent;
-			
-			import data.ConstantsItems;
-			import data.SelectItem;
-			
+
 			import view.interfaces.IHistorySurfaceComponent;
-			import view.interfaces.ISurfaceComponent;
 			import view.primeFaces.surfaceComponents.components.SelectOneRadio;
 			import view.suportClasses.PropertyChangeReferenceCustomHandlerBasic;
 
