VE Integration: Update SelectOneListbox with converter
(reference prominic/Moonshine-IDE#438)

--- a/src/view/primeFaces/forms/SelectOneListboxForm.mxml
+++ b/src/view/primeFaces/forms/SelectOneListboxForm.mxml
@@ -14,7 +14,7 @@
 			import spark.events.GridItemEditorEvent;
 			
 			import data.ConstantsItems;
-			import data.SelectItem;
+			import vo.SelectItem;
 			
 			import view.interfaces.IHistorySurfaceComponent;
 			import view.primeFaces.surfaceComponents.components.SelectOneListbox;
