--- a/src/view/primeFaces/forms/SelectOneMenuForm.mxml
+++ b/src/view/primeFaces/forms/SelectOneMenuForm.mxml
@@ -15,7 +15,7 @@
 			import spark.events.GridItemEditorEvent;
 			
 			import data.ConstantsItems;
-			import data.SelectItem;
+			import vo.SelectItem;
 			
 			import view.interfaces.IHistorySurfaceComponent;
 			import view.primeFaces.surfaceComponents.components.SelectOneMenu;
