Calendar: Improve changes of dates in property editor
- Changing min/max date now reflects to range of selected date in property editor
- Changing pattern also is applied to selected date in property editor
(reference prominic/Moonshine-IDE#389)

--- a/src/view/forms/DateForm.mxml
+++ b/src/view/forms/DateForm.mxml
@@ -73,6 +73,7 @@
         private function dateField_changeHandler(event:Event):void
         {
             selectedItem[textProperty] = this.dateField.selectedDate;
+            this.dispatchEvent(new Event(Event.CHANGE));
         }
 
         private function updateBinding():void
