--- a/src/view/primeFaces/forms/GridForm.mxml
+++ b/src/view/primeFaces/forms/GridForm.mxml
@@ -323,7 +323,7 @@
 	<s:FormHeading label="Custom Rows/Columns" skinClass="skins.FormHeadingSkin"/>
 	<s:FormItem label="Rows" skinClass="skins.StackedFormItemSkin">
 		<s:DataGrid id="dgRows"
-					width="100%" maxHeight="350"
+					width="100%" height="130" requestedMinRowCount="4"
 					sortableColumns="false" draggableColumns="false"
 					dataProvider="{rowsDataProvider}" selectedIndex="@{selectedGrid.selectedRow}">
 			<s:columns>
